# chord-forge

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.cargo/: config.toml
frontend/: package.json  pnpm-lock.yaml
src/: lib.rs
src/domain/: aigc_detect.rs  mod.rs  storage.rs
src/infra/: mod.rs
src/infra/aigc_detect/: tencent.rs
src/infra/storage/cf/: r2.rs
